lab0415/blue-green-deploy-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: aws9-service
spec:
  type: LoadBalancer
  selector:
    color: blue # 초기엔 blue로 지정
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws9-deploy-blue
spec:
  replicas: 3
  selector:
    matchLabels:
      color: blue
  template:
    metadata:
      labels:
        color: blue
    spec:
      containers:
        - name: aws9-ctn-blue
          image: rlatndls113/aws9:blue
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "32Mi"
              cpu: "250m"
            limits:
              memory: "64Mi"
              cpu: "500m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws9-deploy-green
spec:
  replicas: 3
  selector:
    matchLabels:
      color: green
  template:
    metadata:
      labels:
        color: green
    spec:
      containers:
        - name: aws9-ctn-green
          image: rlatndls113/aws9:green
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "32Mi"
              cpu: "250m"
            limits:
              memory: "64Mi"
              cpu: "500m"
