lab0415/keda-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
      - name: sample-app
        image: nginx
        resources:
          requests:
            cpu: "100m"
          limits:
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: keda-svc-lb
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: sample-app
  ports:
  - name: keda-svc-port
    protocol: TCP
    port: 80
    targetPort: 80
