lab0415/mariadb-ns-deploy-svc.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: aws9
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-deploy
  namespace: aws9
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db       # pod에 지정된 label과 동일해야 한다.
  template:        # 여기부터 아래쪽으로 작성한 내용: Pod
    metadata:
      labels:
        app: db
    spec:           # 이 아래 부분이 컨테이너
      containers:
      - name: mariadb-ctn
        image: mariadb:10.4
        env:        # 환경변수 지정 root password는 필수
        - name: MARIADB_ROOT_PASSWORD # = MYSQL_ROOT_PASSWORD
          value: "test1234"
        ports:
        - containerPort: 3306
      tolerations: # 아래 내용으로 막힌 정책을 풀어줘!!
        - key: node-role.kubernetes.io/control-plane
          operator: Equal
          value: ""
          effect: NoSchedule
      nodeSelector:
        kubernetes.io/hostname: master
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb-svc
  namespace: aws9
spec:
  type: LoadBalancer
  selector:         # 이 lb로 접속하면 아래의 label이 있는 pod로 포워딩한다.
    app: db
  ports:
    - protocol: TCP
      port: 3306        # lb의 port
      targetPort: 3306  # pod의 port
      # 나머지(nodeport, cluster-ip)는 자동 할당
